first test config

--- a/templates/plex-server/0/rancher-compose.yml
+++ b/templates/plex-server/0/rancher-compose.yml
@@ -3,9 +3,28 @@
   version: v0.1
   description: Plex Media Server
   questions:
-    - variable: "port"
+    - variable: "PORT"
       type: "string"
       label: "PORT"
-      description: |
-        Frontend Port of Plex
+      description: Frontend Port of Plex
       default: 32400
+    - variable: "PATHCONFIG"
+      type: "string"
+      label: "Config Path"
+      description: persistang Path to your Plex Config (/home/nick/plex-config, ...)
+      default: '/home'
+    - variable: "PATHMEDIA"
+      type: "string"
+      label: "Media Path"
+      description: the Path to your library (/data/media, or a nfs mount /mnt:/media, ...)
+      default: 32400
+    - variable: "PUID"
+      type: "string"
+      label: "PUID"
+      description: GroupID (not required)
+    - variable: "PGID"
+      type: "string"
+      label: "PGID"
+      description: PGID (not required)
+Plex:
+  scale: 1
