--- a/templates/plex-connect/0/docker-compose.yml
+++ b/templates/plex-connect/0/docker-compose.yml
@@ -1,9 +1,5 @@
 plexconnect:
-  image: pducharme/plexconnect
+  image: wasserball/plexconnect
   ports:
     - 80:80
-  volumes:
-    - /etc/localtime:/etc/localtime:ro
-  net: "host"
-  hostname: "name"
 
