--- a/templates/nzbget-sickbeard/0/docker-compose.yml
+++ b/templates/nzbget-sickbeard/0/docker-compose.yml
@@ -4,7 +4,7 @@ nzbget:
     - PUID=${PUID}
     - PGID=${PGID}
   ports:
-    - ${nzbget}:32400
+    - ${nzbget}:6789
   volumes:
     - ${PATHCONFIGNZBGET}:/config
     - ${PATHDOWNLOADSNZBGET}:/downloads
@@ -15,7 +15,7 @@ sickbeard:
     - PUID=${PUID}
     - PGID=${PGID}
   ports:
-    - ${nzbget}:32400
+    - ${sickbeard}:8081
   volumes:
     - ${PATHCONFIGSICKBEARD}:/config
     - ${PATHDOWNLOADSICKBEARD}:/downloads
