--- a/templates/plex-server/0/rancher-compose.yml
+++ b/templates/plex-server/0/rancher-compose.yml
@@ -32,6 +32,7 @@
       type: enum   
       options:
         - host
+        - managed
         - none
       required: true
       default: "host"
