network_mode fix

--- a/templates/plex-server/2/docker-compose.yml
+++ b/templates/plex-server/2/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ${PATHCONFIG}:/config
       - ${PATHMEDIA}:/data
-    net: ${NET}
+    network_mode: ${NET}
     labels:
       io.rancher.container.pull_image: always
       io.rancher.container.dns: 'true'
