--- a/templates/elk/0/docker-compose.yml
+++ b/templates/elk/0/docker-compose.yml
@@ -1,21 +1,68 @@
 version: '2'
 services:
-  elasticsearch:
-    image: elasticsearch:5.1
+  elasticsearch1:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.1.2
+    container_name: elasticsearch1
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    mem_limit: 1g
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - esdata1:/usr/share/elasticsearch/data
     ports:
-      - "${elasticsearch_public_port_rest}:9200"
-      - "${elasticsearch_public_port}:9300"
+      - 9200:9200
+    networks:
+      - esnet
+  elasticsearch2:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.1.2
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "discovery.zen.ping.unicast.hosts=elasticsearch1"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    mem_limit: 1g
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - esdata2:/usr/share/elasticsearch/data
+    networks:
+      - esnet
+
   kibana:
-    image: kibana:5.1
+    image: docker.elastic.co/kibana/kibana:5.1.2
     ports:
-      - "${kibana_public_port}:5601"
-    links:
-      - elasticsearch
-  logstash:
-    image: logstash:5.1
-    links:
-      - elasticsearch
+      - "5601:5601"
+    environment:
+      SERVER_NAME: kibana.example.org
+      ELASTICSEARCH_URL:  http://elasticsearch1:9200
+      ELASTICSEARCH_USERNAME: elastic
+      ELASTICSEARCH_PASSWORD: changeme
+    networks:
+      - esnet
 
+volumes:
+  esdata1:
+    driver: local
+  esdata2:
+    driver: local
 
-    
-
+networks:
+  esnet:
+    driver: bridge
