--- a/templates/elk/0/docker-compose.yml
+++ b/templates/elk/0/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       nofile:
         soft: 65536
         hard: 65536
-    mem_limit: 1g
+    mem_limit: 1000m
     cap_add:
       - IPC_LOCK
     volumes:
@@ -37,7 +37,7 @@ services:
       nofile:
         soft: 65536
         hard: 65536
-    mem_limit: 1g
+    mem_limit: 1000m
     cap_add:
       - IPC_LOCK
     volumes:
