--- a/templates/logrotate/config.yml
+++ b/templates/logrotate/config.yml
@@ -1,4 +1,4 @@
 name: Logrotate from tutumcloud
-description: removes logs in "/var/lib/docker/containers/*/*.log.*" -maxsize 10M
+description: removes logs in "/var/lib/docker/containers/*/*.log.*" -> maxsize 10M ->  every 5 minutes
 version: 0.2-rancher1
 category: Logging
